--- a/dlibFaceRecognition/Base.lproj/Main.storyboard
+++ b/dlibFaceRecognition/Base.lproj/Main.storyboard
@@ -45,6 +45,13 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="UQM-VH-VxE">
+                                <rect key="frame" x="16" y="123" width="358" height="100"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="zmD-D1-1Ji"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="DGb-E7-2eZ"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -52,7 +59,10 @@
                             <constraint firstItem="VhJ-Re-qsn" firstAttribute="centerX" secondItem="uLf-7o-d83" secondAttribute="centerX" id="6Zf-Zs-ZhZ"/>
                             <constraint firstItem="VhJ-Re-qsn" firstAttribute="top" secondItem="IYd-gw-Hkl" secondAttribute="bottom" constant="100" id="8NP-Bs-1bE"/>
                             <constraint firstItem="IYd-gw-Hkl" firstAttribute="top" secondItem="DGb-E7-2eZ" secondAttribute="top" constant="150" id="EXZ-g9-HKu"/>
+                            <constraint firstItem="UQM-VH-VxE" firstAttribute="top" secondItem="DGb-E7-2eZ" secondAttribute="top" constant="32" id="FKU-Hz-lsH"/>
+                            <constraint firstItem="UQM-VH-VxE" firstAttribute="leading" secondItem="DGb-E7-2eZ" secondAttribute="leading" constant="16" id="LxN-9W-849"/>
                             <constraint firstItem="IYd-gw-Hkl" firstAttribute="centerX" secondItem="uLf-7o-d83" secondAttribute="centerX" id="OsG-84-c4n"/>
+                            <constraint firstItem="DGb-E7-2eZ" firstAttribute="trailing" secondItem="UQM-VH-VxE" secondAttribute="trailing" constant="16" id="Ssr-eE-Afq"/>
                             <constraint firstItem="Uvk-2k-FNl" firstAttribute="top" secondItem="IYd-gw-Hkl" secondAttribute="bottom" constant="50" id="bvM-bf-c26"/>
                             <constraint firstItem="Uvk-2k-FNl" firstAttribute="centerX" secondItem="uLf-7o-d83" secondAttribute="centerX" id="q5L-wn-V3U"/>
                         </constraints>
@@ -60,6 +70,7 @@
                     <navigationItem key="navigationItem" title="얼굴 인식 비디오 촬영" id="vuH-3j-Mno"/>
                     <connections>
                         <outlet property="desLabel" destination="Uvk-2k-FNl" id="mG2-mt-p8R"/>
+                        <outlet property="mergeImageView" destination="UQM-VH-VxE" id="RLB-3W-xOO"/>
                         <outlet property="startButton" destination="VhJ-Re-qsn" id="n0A-MF-jYa"/>
                         <outlet property="videoView" destination="IYd-gw-Hkl" id="iWS-YS-kC3"/>
                         <segue destination="U69-Bh-hSr" kind="show" identifier="openFillName" id="kj0-P8-BqM"/>
@@ -143,6 +154,21 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="l9B-P2-nnw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="4633.8461538461534" y="1522.7488151658767"/>
+        </scene>
+        <!--ChatGPT Featrue Extract View Controller-->
+        <scene sceneID="H6d-tH-mua">
+            <objects>
+                <viewController id="cx6-aP-VIo" customClass="chatGPTFeatrueExtractViewController" customModule="dlibFaceRecognition" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="PUY-U1-2QM">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="wLi-sd-K2F"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Vhz-gO-aaT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4252" y="2311"/>
         </scene>
         <!--Recognizing...-->
         <scene sceneID="P8o-VB-EZT">
